--- a/index.html
+++ b/index.html
@@ -1,77 +1,127 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="zh-CN">
 <head>
-  <meta charset='utf-8'>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+  <meta http-equiv="X-UA-Compatible" content="">
+  <title>安能饭否 - 开源的饭否Android客户端</title>
+  <meta name="description" content="Home page for the BASIC hyde template">
+  <meta name="author" content="Lakshmi Vyasarajan">
 
-  <title>fanfoudroid/fanfoudroid @ GitHub</title>
+  <!--  Mobile viewport optimized: j.mp/bplateviewport -->
+  <meta name="viewport" content="">
 
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #ACDAE5;
-      font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-    h1 { font-size: 3.8em; color: #53251a; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #53251a; }
-    h3 { text-align: center; color: #53251a; }
-    a { color: #53251a; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
-</head>
-
-<body>
-  <a href="http://github.com/fanfoudroid/fanfoudroid"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-
-  <div id="container">
-
-    <div class="download">
-      <a href="http://github.com/fanfoudroid/fanfoudroid/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/fanfoudroid/fanfoudroid/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
-    <h1><a href="http://github.com/fanfoudroid/fanfoudroid">fanfoudroid</a>
-      <span class="small">by <a href="http://github.com/fanfoudroid">fanfoudroid</a></span></h1>
-
-    <div class="description">
-      安能饭否
-    </div>
-
-    <h2>Authors</h2>
-<p>ch.Linghu (ch.linghu@gmail.com)<br/>dinophp@gmail.com (dinophp@gmail.com)<br/>San Lau (lds2012@gmail.com)<br/>phoenix.nir@gmail.com (phoenix.nir@gmail.com)<br/>zhoumeng1987@gmail.com (zhoumeng1987@gmail.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>fanfoudroid (lds1129@gmail.com)<br/>      </p>
-
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/fanfoudroid/fanfoudroid/zipball/master">zip</a> or
-      <a href="http://github.com/fanfoudroid/fanfoudroid/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/fanfoudroid/fanfoudroid</pre>
-    </p>
-
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/fanfoudroid/fanfoudroid">fanfoudroid/fanfoudroid</a>
-    </div>
-
-  </div>
-
+    <!-- Place favicon.ico & apple-touch-icon.png
+        in the root of your domain and delete these references -->
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   
-</body>
+    <link rel="stylesheet" href="/fanfoudroid/media/css/site.css">
+  <link rel="stylesheet" href="/fanfoudroid/media/css/syntax.css">
+  <!--[if lt IE 7 ]>
+  <style>
+body {
+    background: url(/fanfoudroid/media/images/bg_body.png);
+}
+  </style>
+  <![endif]-->
+  
+    <!-- All JavaScript at the bottom, except for Modernizr which
+        enables HTML5 elements & feature detects -->
+    <script src="/fanfoudroid/media/js/libs/modernizr-1.7.min.js"></script>
+    </head>
+<body id="index">
+    <a href="http://github.com/fanfoudroid/fanfoudroid"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <div id="container">
+            <div id="main" role="main">
+          <!--
+          <div id="header" class="clearfix">
+          <h1>安能饭否</h1>                              <nav class=main_nav>
+    <ul>
+                <li>
+            <a title="Home Page"
+                class="button white active home"
+                href="/fanfoudroid/index.html">
+                Home
+            </a>
+        </li>        <li>
+            <a title="Portfolio"
+                class="button white portfolio"
+                href="/fanfoudroid/portfolio">
+                Portfolio
+            </a>
+        </li>        <li>
+            <a title="Blog"
+                class="button white blog"
+                href="/fanfoudroid/blog">
+                Blog
+            </a>
+        </li>        <li>
+            <a title="About"
+                class="button white about"
+                href="/fanfoudroid/about.html">
+                About
+            </a>
+        </li>    </ul>
+</nav>
+                    -->
+          </div>
+          <div class="content">
+          <div class="homepage clearfix">
+    <div id="android_phone" class="hg_image">
+        <img src="/fanfoudroid/media/images/bg_android2.png" alt="android" />
+        <div id="android-overlay">
+            <img width="260" height="390" src="/fanfoudroid/media/images/screenshot00.jpg" alt="screenshot" id="android-top" />
+        </div>
+    </div><!-- /hg_image -->
+
+    <div class="hg_text">
+        <h2 style="background: url('/fanfoudroid/media/images/logo.png') no-repeat left center">安能饭否</h2>
+        <p class="description">一款开源的饭否Android客户端</p>
+
+        <h4>页面：</h4>
+        <p>首页，我的空间，私信，随便看看，搜索，@提到我的，收藏，我关注的人，关注我的人</p>
+
+        <h4>功能：</h4>
+        <p>发送/删除消息，发送/回复私信，回复/转发/收藏消息，关注用户，查看用户资料</p>
+
+        <h4>特性：</h4>
+        <p>拍照/图片上传，后台自动提醒，桌面Widget</p>
+
+        <h4>下载：</h4>
+        <img src="https://www.google.com/chart?chs=150x150&cht=qr&chl=http://fanfoudroid.googlecode.com/files/fanfoudroid_0.7.5.4.apk&chld=L|1&choe=UTF-8" alt="download"/>
+        <br />
+
+        <a href="https://market.android.com/details?id=com.ch_linghu.fanfoudroid">电子市场</a> /   
+        <a href="http://fanfoudroid.googlecode.com/files/fanfoudroid_0.7.5.4.apk">APK下载</a> /  
+        <a href="http://github.com/fanfoudroid/fanfoudroid">源代码</a>
+
+    </div><!-- /hg_text -->
+</div>
+          </div>
+      </div>
+      </div> <!--! end of #container -->
+  <div id="footer">
+      Powered by <a href="http://pages.github.com/">Github</a>, <a href="http://ringce.com/hyde">hyde</a>.
+  </div>
+      <!-- Javascript at the bottom for fast page loading -->
+    <script src="/fanfoudroid/media/js/libs/jquery-1.5.1.min.js" type="text/javascript"></script>
+  
+  <script src="/fanfoudroid/media/js/slideshow.js" type="text/javascript"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+	RunSlideShow("android-top", "android-overlay",
+        "/fanfoudroid/media/images/screenshot00.jpg;/fanfoudroid/media/images/screenshot01.jpg;/fanfoudroid/media/images/screenshot02.jpg;/fanfoudroid/media/images/screenshot03.jpg;/fanfoudroid/media/images/screenshot04.jpg;/fanfoudroid/media/images/screenshot05.jpg",
+    5); 
+});
+</script>
+
+
+
+  <!--[if lt IE 7 ]>
+    <script src="/fanfoudroid/media/js/libs/dd_belatedpng.js"></script>
+    <script>DD_belatedPNG.fix('img, .png_bg'); // Fix any <img> or .png_bg bg-images. Also, please read goo.gl/mZiyb </script>
+  <![endif]-->
+
+      
+  </body>
 </html>
