update QR code image

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body {
         <p>拍照/图片上传，后台自动提醒，桌面Widget</p>
 
         <h4>下载：</h4>
-        <img src="https://www.google.com/chart?chs=150x150&cht=qr&chl=http://fanfoudroid.googlecode.com/files/fanfoudroid_0.7.5.4.apk&chld=L|1&choe=UTF-8" alt="download"/>
+        <img src="https://chart.googleapis.com/chart?cht=qr&chs=300x300&chl=https://github.com/downloads/fanfoudroid/fanfoudroid/fanfoudroid_0.7.5.4.apk" alt="download"/>
         <br />
 
         <a href="https://market.android.com/details?id=com.ch_linghu.fanfoudroid">电子市场</a> /   
